--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "sebastian/money",
+    "name": "rocket-internet/money-value-object",
     "description": "Value Object that represents a monetary value (using a currency's smallest unit)",
     "keywords": ["money"],
-    "homepage": "http://www.github.com/sebastianbergmann/money",
+    "homepage": "https://github.com/rocket-internet-berlin/ROCKETMONEYVALUEOBJECT",
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Sebastian Bergmann",
-            "email": "sebastian@phpunit.de"
+            "name": "Rocket Internet",
+            "email": "markus.doetsch@rocket-internet.de"
         }
     ],
     "require": {
